--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                         So fasten your seatbelts, folks, and get ready for an adventure with Buzz - the coin that's
                         going to take us to infinity and beyond!; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
                         rotateX(0deg) rotateY(0deg) rotateZ(-20deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <img src="FROKI_BO AT_TRANSPARENT.png" loading="lazy" alt="" class="icon-1x1-medium">
+                       <!-- <img src="FROKI_BO AT_TRANSPARENT.png" loading="lazy" alt="" class="icon-1x1-medium">-->
                       </div>
                       <div data-w-id="931b4ada-2da3-784f-9aff-b2d083a9c619" class="road-connect"
                         style="will-change: width, height; width: 30px;"></div>
@@ -460,7 +460,7 @@
                         style="will-change: width, height; width: 30px;"></div>
                       <div class="home-howto_timeline-icon-wrapper"
                         style="will-change: opacity, transform; opacity: 0.5; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(-20deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <img src="FROKI_BOAT_TRA NSPARENT.png" loading="lazy" alt="" class="icon-1x1-medium">
+                      <!-- <img src="FROKI_BO AT_TRANSPARENT.png" loading="lazy" alt="" class="icon-1x1-medium">-->
                       </div>
                       <h3 class="road-title">Phase 2</h3>
                     </div>
@@ -471,7 +471,7 @@
                         <h3 class="road-title">Phase 3</h3>
                         <div class="home-howto_timeline-icon-wrapper"
                           style="will-change: opacity, transform; opacity: 0.5; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(-20deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                          <img src="FROKI_BOAT_TRA NSPARENT.png" loading="lazy" alt="" class="icon-1x1-medium">
+                        <!-- <img src="FROKI_BO AT_TRANSPARENT.png" loading="lazy" alt="" class="icon-1x1-medium">-->
                         </div>
                         <div data-w-id="61ab9f41-3477-595e-adf6-1c8fb655d0fb" class="road-connect"
                           style="will-change: width, height; width: 30px;"></div>
@@ -510,7 +510,7 @@
                           style="will-change: width, height; width: 30px;"></div>
                         <div class="home-howto_timeline-icon-wrapper"
                           style="will-change: opacity, transform; opacity: 0.5; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(-20deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                          <img src="FROKI_BOAT_TRA NSPARENT.png" loading="lazy" alt="" class="icon-1x1-medium">
+                          <!-- <img src="FROKI_BO AT_TRANSPARENT.png" loading="lazy" alt="" class="icon-1x1-medium">-->
                         </div>
                         <h3 class="road-title">TO BE ANNOUNCED</h3>
                       </div>
